--- a/src/docs/asciidoc/road-to-immutability.adoc
+++ b/src/docs/asciidoc/road-to-immutability.adoc
@@ -40,6 +40,8 @@ include::{includedir}/road-to-immutability/090-other-annotations.adoc[]
 include::{includedir}/road-to-immutability/095-preconditions.adoc[]
 
 
+include::{includedir}/road-to-immutability/099-appendix.adoc[]
+
 == Copyright and License
 
 Copyright (C) 2020, 2021, Bart Naudts, https://www.e2immu.org
