--- a/src/docs/asciidoc/road-to-immutability/070-modification-part2.adoc
+++ b/src/docs/asciidoc/road-to-immutability/070-modification-part2.adoc
@@ -19,7 +19,7 @@ public class CyclicReferences {
     @MutableModifiesArguments
     static class C1 {
 
-        @Variable
+        // variable
         private int i;
 
         @Modified
